fdo#45187 revert "writerfilter import, fixed the shapes import"

This reverts commit 0e26bd20978cbdd7c59368044c2a21b98ffba164. Sadly
without a test document for the original issue there is no better fix
for this one.

Acked-by: Luboš Luňák <l.lunak@suse.cz>
Acked-by: Cédric Bosdonnat <cedric.bosdonnat.ooo@free.fr>